# iggpy

./: Pipfile  README.md  parse.py  pyproject.toml
iggpy/: __init__.py
iggvue/: README.md  package.json
iggvue/public/: index.html
iggvue/src/: App.vue  main.js  router.js  store.js
iggvue/src/components/: TableAllGames.vue  TableRecentActivity.vue
iggvue/src/views/: RecentActivity.vue  allGames.vue
tests/: test_iggpy.py
