[tool.poetry]
name = "iggpy"
version = "0.1.0"
description = ""
authors = ["Kieran <3812864+MDCEY@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Beautifulsoup4 = "^4.8"
requests = "^2.22"
arrow = "^0.15.2"
hug = "^2.6"
lxml = "^4.4"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
